del:删除无用文件 update:修改数据库连接

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,8 @@
-spring.profiles.active=dev
+spring.profiles.active=local
 
-#\u5B88\u62A4\u7EBF\u7A0B\u8F6E\u8BE2\u5468\u671F
-quartz.daemonTrigger.cronExpression=0/30 * * * * ?
-
-#\u662F\u5426\u5F00\u542F\u5355\u6B21\u4EFB\u52A1
-application.enableOneshotJob=true
-#\u662F\u5426\u5F00\u542F\u5468\u671F\u4EFB\u52A1
-application.enableCronJob=true
-#\u4EFB\u52A1\u8282\u70B9\u5206\u7C7B
-application.serverNode=macth-task
+spring.datasource.url=jdbc:mysql://localhost:3306/cust_db?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
 
 #mybatis
 mybatis.mapper-locations=classpath:mybatis/*Mapper.xml
