update:增加thymeleaf，删除无用的文件。

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -9,3 +9,11 @@ redis.password=
 redis.poolMaxTotal=1000
 redis.poolMaxIdle=500
 redis.poolMaxWait=500
+
+#thymeleaf
+spring.thymeleaf.prefix=classpath:/template/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML5
