--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,25 @@
 #\u7AEF\u53E3\u53F7
-server.port=${random.int[30000,39999]}
+server.port=8080
+
+#redis
+redis.host=127.0.0.1
+redis.port=6379
+redis.timeout=10000
+redis.password=
+redis.poolMaxTotal=1000
+redis.poolMaxIdle=500
+redis.poolMaxWait=500
+
+#thymeleaf
+spring.thymeleaf.prefix=classpath:/template/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML5
+#\u65E5\u5FD7\u914D\u7F6E
+log.level=info
+log.path=/app/data/logs/boot-thread
 
 
 
