--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -17,3 +17,6 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML5
+#\u65E5\u5FD7\u914D\u7F6E
+log.level=info
+log.path=D:/workspace/boot-thread/src/main/resources/logs
