--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.thread</groupId>
-    <artifactId>boot-thread</artifactId>
+    <groupId>com.zl</groupId>
+    <artifactId>boot-learing</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
@@ -23,8 +23,6 @@
         <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
         <lombok.version>1.16.18</lombok.version>
         <logstash-logback-encoder.version>5.0</logstash-logback-encoder.version>
-
-
         <druid.version>1.1.10</druid.version>
         <fastjson.version>1.2.47</fastjson.version>
         <commons-collections.version>3.2.1</commons-collections.version>
