--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,25 @@
+#\u73AF\u5883\u9009\u62E9
 spring.profiles.active=local
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cust_db?useUnicode=true&characterEncoding=utf8&useSSL=false
+#s\u6570\u636E\u5E93\u8FDE\u63A5
+spring.datasource.url=jdbc:mysql://localhost:3306/bootdo?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.filters=stat
+spring.datasource.maxActive=1000
+spring.datasource.initialSize=100
+spring.datasource.maxWait=60000
+spring.datasource.minIdle=500
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=select 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxOpenPreparedStatements=20
 
 #mybatis
 mybatis.mapper-locations=classpath:mybatis/*Mapper.xml
