--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,34 @@
 #\u7AEF\u53E3\u53F7
-server.port=8080
-
+server.port=20403
+#\u65E5\u5FD7\u914D\u7F6E
+log.level=info
+log.path=D:/workspace/boot-thread/src/main/resources/logs
+#thymeleaf
+spring.thymeleaf.prefix=classpath:/template/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML5
+#s\u6570\u636E\u5E93\u8FDE\u63A5
+spring.datasource.url=jdbc:mysql://10.32.5.103:3306/bootdo?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.filters=stat
+spring.datasource.maxActive=1000
+spring.datasource.initialSize=100
+spring.datasource.maxWait=60000
+spring.datasource.minIdle=500
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=select 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxOpenPreparedStatements=20
 #redis
 redis.host=127.0.0.1
 redis.port=6379
@@ -10,16 +38,6 @@ redis.poolMaxTotal=1000
 redis.poolMaxIdle=500
 redis.poolMaxWait=500
 
-#thymeleaf
-spring.thymeleaf.prefix=classpath:/template/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
-spring.thymeleaf.enabled=true
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.mode=HTML5
-#\u65E5\u5FD7\u914D\u7F6E
-log.level=info
-log.path=/app/data/logs/boot-thread
 
 
 
