update：修改云服务器日志记录的位置

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 server.port=20403
 #\u65E5\u5FD7\u914D\u7F6E
 log.level=info
-log.path=D:/workspace/boot-thread/src/main/resources/logs
+log.path=/usr/local/logs
 #thymeleaf
 spring.thymeleaf.prefix=classpath:/template/
 spring.thymeleaf.suffix=.html
