update：修改日志的端口和日志访问路径

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 #\u7AEF\u53E3\u53F7
-server.port=20403
+server.port=20401
 #\u65E5\u5FD7\u914D\u7F6E
 log.level=info
-log.path=/usr/local/logs
+log.path=/app/data/logs/boot-learning
 #thymeleaf
 spring.thymeleaf.prefix=classpath:/template/
 spring.thymeleaf.suffix=.html
