add:增加esUtil分页查询和高亮显示。 update:修改yml配置 delete:删除没有用到的分页实体类

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -29,7 +29,7 @@ spring:
     prefix: classpath:/templates/
     suffix: .html
     cache: false
-    mode: HTML5
+    mode: HTML
 #redis单节点配置
 redis:
   host: 127.0.0.1
@@ -46,7 +46,7 @@ log:
 elasticsearch:
   host: 127.0.0.1
   port: 9300
-  cluster-name: elastic
+  cluster-name: elasticsearch
   pool: 5
 
 
